# winbox

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
src/winbox/: __init__.py  __main__.py  binfmt.py  cli.py  config.py  eventlogs.py  executor.py  guest.py  installer.py  jobs.py  mcp.py  nwfilter.py  ps.py  shell.py  smb.py  tools.py  utils.py  vm.py
src/winbox/cli/: __init__.py  _ps.py  applocker.py  autologin.py  av.py  binfmt.py  eventlogs.py  exec.py  files.py  jobs.py  kdbg.py  mcp.py  msi.py  network.py  office.py  setup.py  upload.py  vm.py
src/winbox/data/: Invoke-ConPtyShell.ps1  __init__.py  bootstrap.ps1  config.default  office-config.xml  provision.ps1  tools.txt  unattend.xml  winbox-isolate-ipv4.xml  winbox-isolate.xml
src/winbox/data/applocker/: clear-policy.xml  default-policy.xml
src/winbox/data/ps/: applocker_apply.ps1  applocker_clear.ps1  enable_office_macros.ps1  reset_dns.ps1  set_dns.ps1
src/winbox/exec/: __init__.py  executor.py  shell.py
src/winbox/kdbg/: __init__.py  demangle.py  format.py  gdbstub.py  hmp.py  memory.py  pdb.py  pe.py  store.py  symbols.py  walk.py
src/winbox/kdbg/debugger/: __init__.py  client.py  daemon.py  install.py  predicate.py  protocol.py  rsp.py
src/winbox/setup/: __init__.py  installer.py  iso.py
src/winbox/vm/: __init__.py  guest.py  lifecycle.py
tests/: conftest.py  test_applocker.py  test_autologin.py  test_av.py  test_binfmt.py  test_bugfixes.py  test_config.py  test_destroy.py  test_download_tools.py  test_eventlogs.py  test_executor.py  test_guest.py  test_installer.py  test_iso.py  test_jobs.py  test_jobs_integration.py  test_kdbg.py  test_kdbg_client.py  test_kdbg_daemon.py  test_kdbg_demangle.py  test_kdbg_gdbstub.py  test_kdbg_install.py  test_kdbg_install_integration.py  test_kdbg_memory.py  test_kdbg_pdb.py  test_kdbg_pe.py  test_kdbg_predicate.py  test_kdbg_protocol.py  test_kdbg_rsp.py  test_kdbg_rsp_integration.py  test_kdbg_store.py  test_kdbg_symbols.py  test_kdbg_walk.py  test_mcp.py  test_msi.py  test_network.py  test_nwfilter.py  test_office.py  test_setup_lock.py  test_shell.py  (+6 more)
