[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "winbox"
version = "0.1.0"
description = "Transparent Windows execution proxy for Kali — run Windows pentest tools via a headless QEMU/KVM VM"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
]

[project.scripts]
winbox = "winbox.cli:cli"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/winbox"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: end-to-end tests requiring a running VM (deselect with -m 'not integration')",
]
