[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "winbox"
version = "1.2.1"
description = "Transparent Windows execution proxy for Kali — run Windows pentest tools via a headless QEMU/KVM VM"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "totekuh"}]
readme = "README.md"
keywords = ["windows", "kali", "pentest", "qemu", "kvm", "vm"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "pefile>=2024.8.26",
]

[project.urls]
Homepage = "https://github.com/totekuh/winbox"
Repository = "https://github.com/totekuh/winbox"
Issues = "https://github.com/totekuh/winbox/issues"

[project.scripts]
winbox = "winbox.cli:cli"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=4.0"]
mcp = ["mcp>=1.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/winbox"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: end-to-end tests requiring a running VM (deselect with -m 'not integration')",
]
